# libcurl_jsoncpp

./: .cproject  .project  CMakeLists.txt  face_recong.cpp
include/: CardRecordManager.h  DeviceUtil.h  FaceController.h  FaceDao.h  FaceService.h  HttpUtils.h  HttpUtils.hpp  modules.h  threadpool.h
libs/: libcurl.la
libs/pkgconfig/: libcurl.pc
src/: CardRecordManager.cpp  DeviceUtil.cpp  FaceController.cpp  FaceDao.cpp  FaceService.cpp  HttpUtils.cpp  face_recong.cpp  threadpool.cpp
src/json/: json_reader.cpp  json_value.cpp  json_writer.cpp
